--- a/c3集群管理工具.md
+++ b/c3集群管理工具.md
@@ -6,73 +6,83 @@ https://www.csm.ornl.gov/torc/c3/C3softwarepage.shtml
 
 下载: [c3-5.1.3.tar.gz](c3-5.1.3.tar.gz)
 
+
+
 安装
 
-tar -zxvf  c3-5.1.3.tar.gz
+>
+> tar -zxvf  c3-5.1.3.tar.gz
+>
+> cd c3-5.1.3
+>
+> ./configure --prefix=/opt/c3
+>
+> make install
+>
 
-cd c3-5.1.3
 
-./configure --prefix=/opt/c3
-
-make install
 
 安装结果
 
-[root@h101 c3-5.1.3]# cd /opt/c3
-[root@h101 c3]# ls
-doc  etc  usr
+> [root@h101 c3-5.1.3]# cd /opt/c3
+> [root@h101 c3]# ls
+> doc  etc  usr
 
 
 
 设置环境变量
 
+> [root@h101 ~]# vi .bash_profile
+>
+> ```shell
+> export C3_HOME=/opt/c3
+> export PATH=$C3_HOME/usr/bin:$PATH
+> ```
+>
+> [root@h101 ~]# source .bash_profile
+> [root@h101 ~]# which cpush
+> /opt/c3/usr/bin/cpush
 
 
-[root@h101 ~]# vi .bash_profile
-
-```shell
-export C3_HOME=/opt/c3
-export PATH=$C3_HOME/usr/bin:$PATH
-```
-
-[root@h101 ~]# source .bash_profile
-[root@h101 ~]# which cpush
-/opt/c3/usr/bin/cpush
 
 查看配置
 
-cat /opt/c3/doc/README
-
-/etc/c3.conf
+> cat /opt/c3/doc/README
+>
+> /etc/c3.conf
+>
 
 
 
 查询man使用文档
 
-[root@h101 etc]# man **-M /opt/c3/doc/man** cpush
+> [root@h101 etc]# man **-M /opt/c3/doc/man** cpush
+
+
 
 配置MANPATH就可以不用加-M参数指定了：
 
-export MANPATH=$MANPATH:$C3_HOME/doc/man
+> export MANPATH=$MANPATH:$C3_HOME/doc/man
+>
 
 
 
 配置hosts文件
 
-192.168.56.101 h101
-192.168.56.102 h102
-192.168.56.103 h103
-192.168.56.103 h104
+> 192.168.56.101 h101
+> 192.168.56.102 h102
+> 192.168.56.103 h103
+> 192.168.56.103 h104
 
 
 
 配置集群
 
-[root@h101 doc]# cat /etc/c3.conf 
-   cluster h {
-​      h101
-​      h[101-104]
-   }
+> [root@h101 doc]# cat /etc/c3.conf 
+>    cluster h {
+> ​      h101
+> ​      h[101-104]
+>    }
 
 
 
@@ -82,8 +92,9 @@ export MANPATH=$MANPATH:$C3_HOME/doc/man
 
 集群执行ls命令
 
-[root@h101 doc]# cexec h: ls
+> [root@h101 doc]# cexec h: ls
 
+```
 The authenticity of host 'h103 (192.168.56.103)' can't be established.
 ECDSA key fingerprint is SHA256:epP1OFtThjD3D1WojGrAnYkmT09fmRQWs2pdRe/BzcA.
 ECDSA key fingerprint is MD5:b8:0f:97:6b:a4:97:d5:a0:1a:dc:6d:2a:dd:26:53:a5.
@@ -118,6 +129,9 @@ anaconda-ks.cfg
 Warning: Permanently added 'h104,192.168.56.103' (ECDSA) to the list of known hosts.
 Permission denied, please try again.
 anaconda-ks.cfg
+```
+
+
 
 
 
@@ -125,7 +139,9 @@ anaconda-ks.cfg
 
 
 
-[root@localhost ~]# **ssh-keygen -t rsa**
+> [root@localhost ~]# **ssh-keygen -t rsa**
+
+```Generating public/private rsa key pair.
 Generating public/private rsa key pair.
 Enter file in which to save the key (/root/.ssh/id_rsa): **回车**
 Created directory '/root/.ssh'.
@@ -147,8 +163,11 @@ The key's randomart image is:
 |       . +@o+o+  |
 |        oB+XO=+=.|
 +----[SHA256]-----+
+```
 
-[root@localhost ~]# **ssh-copy-id -i ~/.ssh/id_rsa.pub 192.168.56.101**
+> [root@localhost ~]# **ssh-copy-id -i ~/.ssh/id_rsa.pub 192.168.56.101**
+
+```/usr/bin/ssh-copy-id: INFO: Source of key(s) to be installed: "/root/.ssh/id_rsa.pub"
 /usr/bin/ssh-copy-id: INFO: Source of key(s) to be installed: "/root/.ssh/id_rsa.pub"
 The authenticity of host '192.168.56.101 (192.168.56.101)' can't be established.
 ECDSA key fingerprint is SHA256:epP1OFtThjD3D1WojGrAnYkmT09fmRQWs2pdRe/BzcA.
@@ -157,11 +176,13 @@ Are you sure you want to continue connecting (yes/no)? yes
 /usr/bin/ssh-copy-id: INFO: attempting to log in with the new key(s), to filter out any that are already installed
 /usr/bin/ssh-copy-id: INFO: 1 key(s) remain to be installed -- if you are prompted now it is to install the new keys
 root@192.168.56.101's password: 
-
 Number of key(s) added: 1
 
 Now try logging into the machine, with:   "ssh '192.168.56.101'"
 and check to make sure that only the key(s) you wanted were added.
+```
+
+
 
 
 
@@ -169,7 +190,9 @@ and check to make sure that only the key(s) you wanted were added.
 
 
 
-[root@h101 ~]# ssh-keygen -t rsa
+> [root@h101 ~]# ssh-keygen -t rsa
+
+```Generating public/private rsa key pair.
 Generating public/private rsa key pair.
 Enter file in which to save the key (/root/.ssh/id_rsa): 
 Enter passphrase (empty for no passphrase): 
@@ -195,7 +218,6 @@ The key's randomart image is:
 /usr/bin/ssh-copy-id: INFO: attempting to log in with the new key(s), to filter out any that are already installed
 /usr/bin/ssh-copy-id: INFO: 1 key(s) remain to be installed -- if you are prompted now it is to install the new keys
 root@h102's password: 
-
 Number of key(s) added: 1
 
 Now try logging into the machine, with:   "ssh 'h102'"
@@ -225,37 +247,41 @@ Are you sure you want to continue connecting (yes/no)? yes
 /usr/bin/ssh-copy-id: INFO: attempting to log in with the new key(s), to filter out any that are already installed
 
 /usr/bin/ssh-copy-id: WARNING: All keys were skipped because they already exist on the remote system.
-​                (if you think this is a mistake, you may want to use -f option)
+                (if you think this is a mistake, you may want to use -f option)
+```
 
-[root@h101 ~]# ssh h102
-Last login: Wed Jan  2 21:39:25 2019 from h101
-[root@h102 ~]# exit
-登出
-Connection to h102 closed.
-[root@h101 ~]# ssh h103
-Last login: Wed Jan  2 20:16:13 2019 from 192.168.56.1
-[root@localhost ~]# exit
-登出
-Connection to h103 closed.
-[root@h101 ~]# ssh h104
-Last login: Wed Jan  2 21:43:16 2019 from 192.168.56.101
-[root@localhost ~]# exit
-登出
-Connection to h104 closed.
+
+
+> [root@h101 ~]# ssh h102
+> Last login: Wed Jan  2 21:39:25 2019 from h101
+> [root@h102 ~]# exit
+> 登出
+> Connection to h102 closed.
+> [root@h101 ~]# ssh h103
+> Last login: Wed Jan  2 20:16:13 2019 from 192.168.56.1
+> [root@localhost ~]# exit
+> 登出
+> Connection to h103 closed.
+> [root@h101 ~]# ssh h104
+> Last login: Wed Jan  2 21:43:16 2019 from 192.168.56.101
+> [root@localhost ~]# exit
+> 登出
+> Connection to h104 closed.
 
 
 
 还需要设置免密登录到自己
 
-[root@h101 ~]# ssh h101
-root@h101's password: 
+> [root@h101 ~]# ssh h101
+> root@h101's password: 
 
-[root@h101 ~]# ssh-copy-id -i ~/.ssh/id_rsa.pub h101
+> [root@h101 ~]# ssh-copy-id -i ~/.ssh/id_rsa.pub h101
+
+```/usr/bin/ssh-copy-id: INFO: Source of key(s) to be installed: "/root/.ssh/id_rsa.pub"
 /usr/bin/ssh-copy-id: INFO: Source of key(s) to be installed: "/root/.ssh/id_rsa.pub"
 /usr/bin/ssh-copy-id: INFO: attempting to log in with the new key(s), to filter out any that are already installed
 /usr/bin/ssh-copy-id: INFO: 1 key(s) remain to be installed -- if you are prompted now it is to install the new keys
 root@h101's password: 
-
 Number of key(s) added: 1
 
 Now try logging into the machine, with:   "ssh 'h101'"
@@ -263,14 +289,17 @@ and check to make sure that only the key(s) you wanted were added.
 
 [root@h101 ~]# ssh h101
 Last login: Wed Jan  2 21:44:22 2019 from 192.168.56.1
+```
+
+
 
 
 
 再执行集群ls命令：
 
-[root@h101 ~]# cexec h: ls
+> [root@h101 ~]# cexec h: ls
 
-************************* h *************************
+```************************* h *************************
 --------- h101---------
 anaconda-ks.cfg
 c3-5.1.3
@@ -284,12 +313,15 @@ anaconda-ks.cfg
 anaconda-ks.cfg
 --------- h104---------
 anaconda-ks.cfg
+```
 
 
 
-**man cpush**
+> **man cpush**
 
- Usage: cpush \[OPTIONS][MACHINE DEFINITIONS] source(s) target
+```
+ Usage: cpush [OPTIONS][MACHINE DEFINITIONS] source(s) target
+```
 
 
 
@@ -307,7 +339,9 @@ sh: rsync: 未找到命令
 
 第一台安装后，还是报错，每一台都要安装
 
-[root@h101 ~]# cpush h: /etc/hosts /etc/hosts
+> [root@h101 ~]# cpush h: /etc/hosts /etc/hosts
+
+```
 bash: rsync: 未找到命令
 rsync: connection unexpectedly closed (0 bytes received so far) [sender]
 rsync error: remote command not found (code 127) at io.c(226) [sender=3.1.2]
@@ -318,27 +352,35 @@ rsync error: remote command not found (code 127) at io.c(226) [sender=3.1.2]
 bash: rsync: 未找到命令
 rsync: connection unexpectedly closed (0 bytes received so far) [sender]
 rsync error: remote command not found (code 127) at io.c(226) [sender=3.1.2]
+```
+
+
 
 
 
 
 
 [root@h101 ~]# cexec h: yum install rsync -y
+
+```
+
+
 ************************* h *************************
 --------- h101---------
 已加载插件：fastestmirror
 Loading mirror speeds from cached hostfile
- * c7-media: 
-    软件包 rsync-3.1.2-4.el7.x86_64 已安装并且是最新版本
-    无须任何处理
-    --------- h102---------
-    已加载插件：fastestmirror
-    Determining fastest mirrors
- * c7-media: 
-    正在解决依赖关系
-    --> 正在检查事务
-    ---> 软件包 rsync.x86_64.0.3.1.2-4.el7 将被 安装
-    --> 解决依赖关系完成
+
+- c7-media: 
+  软件包 rsync-3.1.2-4.el7.x86_64 已安装并且是最新版本
+  无须任何处理
+  --------- h102---------
+  已加载插件：fastestmirror
+  Determining fastest mirrors
+- c7-media: 
+  正在解决依赖关系
+  --> 正在检查事务
+  ---> 软件包 rsync.x86_64.0.3.1.2-4.el7 将被 安装
+  --> 解决依赖关系完成
 
 依赖关系解决
 
@@ -369,11 +411,12 @@ Running transaction
 --------- h103---------
 已加载插件：fastestmirror
 Determining fastest mirrors
- * c7-media: 
-    正在解决依赖关系
-    --> 正在检查事务
-    ---> 软件包 rsync.x86_64.0.3.1.2-4.el7 将被 安装
-    --> 解决依赖关系完成
+
+- c7-media: 
+  正在解决依赖关系
+  --> 正在检查事务
+  ---> 软件包 rsync.x86_64.0.3.1.2-4.el7 将被 安装
+  --> 解决依赖关系完成
 
 依赖关系解决
 
@@ -404,13 +447,15 @@ Running transaction
 --------- h104---------
 已加载插件：fastestmirror
 Loading mirror speeds from cached hostfile
- * c7-media: 
-    软件包 rsync-3.1.2-4.el7.x86_64 已安装并且是最新版本
-    无须任何处理
+
+- c7-media: 
+  软件包 rsync-3.1.2-4.el7.x86_64 已安装并且是最新版本
+  无须任何处理
+```
 
 
 
-再cpush，发现h101 - h103都有了，但是h104还是旧的，说明h104没有包含
+再cpush，发现h101 - h103都有了，但是h104还是旧的，说明h104没有包含？
 
 [root@h101 ~]# cpush h: /etc/hosts /etc/hosts
 [root@h101 ~]# cat /etc/c3.conf 
@@ -419,31 +464,32 @@ Loading mirror speeds from cached hostfile
 ​      h[101-104]
    }
 
-README
-
-```
- The range of name "node[1-64]" is
-listed as slots 0-63 in the list.
-```
-
 
 
 改为105还是不行
 
-[root@h101 ~]# cat /etc/c3.conf 
-   cluster h {
-​      h101
-​      h[101-10**5**]
-   }
+> 
+> [root@h101 ~]# cat /etc/c3.conf 
+>    cluster h {
+> ​      h101
+> ​      h[101-105]
+>    }
+> 
+
+
+
+
 
 发现这里还是闭区间的，是自己hosts配置错了导致的。h104配置到103的ip去了。
 
-[root@h101 ~]# ping h10**4**
-PING h104 (192.168.56.10**3**) 56(84) bytes of data.
+> [root@h101 ~]# ping h10**4**
+> PING h104 (192.168.56.10**3**) 56(84) bytes of data.
 
 需要输入密码，之前ssh-copy-id也是错的，再次配置
 
-[root@h101 ~]# cpush h: /etc/hosts /etc/hosts
+> [root@h101 ~]# cpush h: /etc/hosts /etc/hosts
+
+```
 Warning: Permanently added the ECDSA host key for IP address '192.168.56.104' to the list of known hosts.
 root@h104's password: 
 Keyboard interrupt
@@ -462,18 +508,25 @@ and check to make sure that only the key(s) you wanted were added.
 [root@h101 ~]# ssh h104
 Last login: Wed Jan  2 20:16:38 2019 from 192.168.56.1
 [root@localhost ~]# 
+```
+
+
 
 
 
 再执行一下，确认ip配置正确
 
-[root@h101 ~]# cexec h: "ifconfig |grep 192.168"
+> [root@h101 ~]# cexec h: "ifconfig |grep 192.168"
+
+```
 ************************* h *************************
 --------- h101---------
-​        inet 192.168.56.101  netmask 255.255.255.0  broadcast 192.168.56.255
+        inet 192.168.56.101  netmask 255.255.255.0  broadcast 192.168.56.255
 --------- h102---------
-​        inet 192.168.56.102  netmask 255.255.255.0  broadcast 192.168.56.255
+        inet 192.168.56.102  netmask 255.255.255.0  broadcast 192.168.56.255
 --------- h103---------
-​        inet 192.168.56.103  netmask 255.255.255.0  broadcast 192.168.56.255
+        inet 192.168.56.103  netmask 255.255.255.0  broadcast 192.168.56.255
 --------- h104---------
-​        inet 192.168.56.104  netmask 255.255.255.0  broadcast 192.168.56.255
+        inet 192.168.56.104  netmask 255.255.255.0  broadcast 192.168.56.255
+```
+
