日志从flume收集到kafka

--- a/日志系统搭建.md
+++ b/日志系统搭建.md
@@ -279,6 +279,169 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.171-b11, mixed mode)
 
 ## flume收集日志到kafka
 
+### 创建kafka topic
+
+```
+[app@h104 conf]$ kafka-topics.sh --zookeeper h102:2181,h103:2181,h104:2181 --topic tt_topic --replication-factor 3 --partitions 3 --create
+WARNING: Due to limitations in metric names, topics with a period ('.') or underscore ('_') could collide. To avoid issues it is best to use either, but not both.
+Created topic "tt_topic".
+
+```
+
+提示说不要带.或者_
+
+那就避免吧，这里要处理的是日志，topic就叫logtopic吧
+
+```
+[app@h104 conf]$ kafka-topics.sh --zookeeper h102:2181,h103:2181,h104:2181 --topic logtopic --replication-factor 3 --partitions 3 --create
+Created topic "logtopic".
+
+```
+
+查看logtopic属性
+
+```
+[app@h104 conf]$ kafka-topics.sh --zookeeper h102:2181,h103:2181,h104:2181 --topic logtopic --describe
+Topic:logtopic	PartitionCount:3	ReplicationFactor:3	Configs:
+	Topic: logtopic	Partition: 0	Leader: 2	Replicas: 2,1,3	Isr: 2,1,3
+	Topic: logtopic	Partition: 1	Leader: 3	Replicas: 3,2,1	Isr: 3,2,1
+	Topic: logtopic	Partition: 2	Leader: 1	Replicas: 1,3,2	Isr: 1,3,2
+```
+
+
+
+### 开启kafka消费者
+
+```
+[app@h104 ~]$ kafka-console-consumer.sh --bootstrap-server  h103:9092  --from-beginning --topic logtopic
+```
+
+
+
+
+
+### 上传和配置flume
+
+```
+[app@h104 ~]$ tar -zxvf apache-flume-1.8.0-bin.tar.gz 
+
+[app@h104 ~]$ ln -s apache-flume-1.8.0-bin/ flume
+[app@h104 ~]$ cd flume/conf/
+
+[app@h104 conf]$ cp flume-conf.properties.template flume-conf.properties
+[app@h104 conf]$ cp flume-env.sh.template flume-env.sh
+```
+
+
+
+### 配置flume-env.sh
+
+```
+可以设置JAVA_HOME，这里好像也可以直接用环境变量中的，所以实际没有改动这个文件
+
+```
+
+
+
+### 配置flume-kafka.properties 
+
+```
+ag1.sources=src1 src2
+ag1.sinks=sink1
+ag1.channels=chn1
+
+ag1.sources.src1.type = exec
+ag1.sources.src1.shell = /bin/bash -c
+ag1.sources.src1.command = tail -F /home/app/kafka/logs/server.log
+ag1.sources.src1.channels = chn1
+
+ag1.sources.src2.type = exec
+ag1.sources.src2.shell = /bin/bash -c
+ag1.sources.src2.command = tail -F /home/app/kafka/logs/server.log.2019-01-17-12
+ag1.sources.src2.channels = chn1
+
+ag1.channels.chn1.type = memory
+agent.channels.chn1.keep-alive = 60  
+ag1.channels.chn1.capacity = 1000
+ag1.channels.chn1.transactionCapacity = 100
+
+
+ag1.sinks.sink1.type = org.apache.flume.sink.kafka.KafkaSink
+ag1.sinks.sink1.topic = logtopic
+ag1.sinks.sink1.brokerList = h101:9092,h102:9092,h103:9092
+ag1.sinks.sink1.channel = chn1
+
+
+```
+
+
+
+### 开启flume收集日志
+
+```
+[app@h104 flume]$ bin/flume-ng agent -n ag1 --conf ./conf/ -f conf/flume-kafka.properties  -Dflume.root.logger=DEBUG,console
+
+```
+
+
+
+启动后，kafka-consumer就能收到flume收集过来的日志信息了。
+
+
+
+### 造数据
+
+收集tmp目录下自己创建的文件，用于观察自己追加过去的内容是否到kafka
+
+```
+ag1.sources=src1 src2
+ag1.sinks=sink1
+ag1.channels=chn1
+
+ag1.sources.src1.type = exec
+ag1.sources.src1.shell = /bin/bash -c
+ag1.sources.src1.command = tail -F /tmp/server111.log
+ag1.sources.src1.channels = chn1
+
+ag1.sources.src2.type = exec
+ag1.sources.src2.shell = /bin/bash -c
+ag1.sources.src2.command = tail -F /tmp/server222.log
+ag1.sources.src2.channels = chn1
+
+ag1.channels.chn1.type = memory
+agent.channels.chn1.keep-alive = 60  
+ag1.channels.chn1.capacity = 1000
+ag1.channels.chn1.transactionCapacity = 100
+
+
+ag1.sinks.sink1.type = org.apache.flume.sink.kafka.KafkaSink
+ag1.sinks.sink1.topic = logtopic
+ag1.sinks.sink1.brokerList = h101:9092,h102:9092,h103:9092
+ag1.sinks.sink1.channel = chn1
+
+```
+
+造数据
+
+```
+[app@h104 ~]$ echo "111111111" >> /tmp/server111.log
+[app@h104 ~]$ echo "111111111" >> /tmp/server111.log
+[app@h104 ~]$ echo "111111111" >> /tmp/server111.log;echo "222222222222222" >> /tmp/server222.log
+
+```
+
+consomer接收到的数据
+
+```
+111111111
+111111111
+222222222222222
+111111111
+
+```
+
+到这一步，说明flume -> kafka 流程测试没问题
+
 
 
 ## logstash消费kafka数据到es
