--- a/日志系统搭建.md
+++ b/日志系统搭建.md
@@ -456,6 +456,8 @@ consomer接收到的数据
 
 [日志监控平台搭建 关于flume Kafka Elk](https://www.slahser.com/2016/04/21/%E6%97%A5%E5%BF%97%E7%9B%91%E6%8E%A7%E5%B9%B3%E5%8F%B0%E6%90%AD%E5%BB%BA-%E5%85%B3%E4%BA%8EFlume-Kafka-ELK/)
 
+[ELK 安装部署实战 (最新6.4.0版本)](https://www.cnblogs.com/woodylau/p/elk_latest.html)
+
 [日志收集之--将Kafka数据导入elasticsearch](https://www.cnblogs.com/moonandstar08/p/6556899.html)
 
 [【通天塔之日志分析平台】壹 ELK 环境搭建](https://wdxtub.com/2016/11/19/babel-log-analysis-platform-1/)
@@ -465,5 +467,6 @@ consomer接收到的数据
 [统一日志检索部署（es、logstash、kafka、flume）](https://www.cnblogs.com/sailq21/p/9230336.html)
 
 https://mermaidjs.github.io/flowchart.html
+
 
 
