--- a/日志系统搭建.md
+++ b/日志系统搭建.md
@@ -444,6 +444,136 @@ consomer接收到的数据
 
 
 
+## es集群安装
+
+[es集群安装测试](es集群安装测试.md)
+
+这里测试环境，就只启动主节点吧
+
+启动放到后台运行
+
+加上-d参数
+
+```
+[app@h101 ~]$ cd es/bin
+[app@h101 bin]$ ./elasticsearch -d
+[app@h101 bin]$ jps
+8569 Kafka
+12029 Jps
+12015 Elasticsearch
+```
+
+
+
+## kibana安装
+
+
+
+```
+[app@h101 ~]$ tar -zxvf kibana-6.4.0-linux-x86_64.tar.gz 
+[app@h101 ~]$ rm kibana-6.4.0-linux-x86_64.tar.gz 
+[app@h101 ~]$ ln -s kibana-6.4.0-linux-x86_64 kibana
+
+[app@h101 ~]$ cd kibana
+[app@h101 kibana]$ vi config/kibana.yml 
+```
+
+```
+server.host: "192.168.56.101"
+```
+
+
+
+启动
+
+> [app@h101 kibana]$ bin/kibana
+
+
+
+报错
+
+```
+  log   [13:37:48.470] [info][listening][server][http] Server running at http://192.168.56.101:5601
+  log   [13:37:48.473] [warning][admin][elasticsearch] Unable to revive connection: http://localhost:9200/
+  log   [13:37:48.474] [warning][admin][elasticsearch] No living connections
+  log   [13:37:48.828] [warning][admin][elasticsearch] Unable to revive connection: http://localhost:9200/
+  log   [13:37:48.830] [warning][admin][elasticsearch] No living connections
+
+```
+
+因为es监听，没有监听localhost的
+
+```
+tcp6       0      0 192.168.56.101:9200     :::*                    LISTEN      12015/java 
+```
+
+再编辑kibana配置文件，设置es的地址
+
+[app@h101 kibana]$ vi config/kibana.yml 
+
+```
+elasticsearch.url: "http://192.168.56.101:9200"
+
+```
+
+再启动，启动成功
+
+```
+[app@h101 bin]$ ./kibana
+  log   [13:40:28.476] [info][status][plugin:kibana@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:28.545] [info][status][plugin:elasticsearch@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:28.552] [info][status][plugin:xpack_main@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:28.562] [info][status][plugin:searchprofiler@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:28.569] [info][status][plugin:ml@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:28.679] [info][status][plugin:tilemap@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:28.681] [info][status][plugin:watcher@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:28.712] [info][status][plugin:license_management@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:28.716] [info][status][plugin:index_management@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:28.975] [info][status][plugin:timelion@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:28.978] [info][status][plugin:graph@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:29.004] [info][status][plugin:monitoring@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:29.008] [warning][security] Generating a random key for xpack.security.encryptionKey. To prevent sessions from being invalidated on restart, please set xpack.security.encryptionKey in kibana.yml
+  log   [13:40:29.012] [warning][security] Session cookies will be transmitted over insecure connections. This is not recommended.
+  log   [13:40:29.027] [info][status][plugin:security@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:29.063] [info][status][plugin:grokdebugger@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:29.075] [info][status][plugin:dashboard_mode@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:29.090] [info][status][plugin:logstash@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:29.130] [info][status][plugin:apm@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:29.137] [info][status][plugin:console@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:29.141] [info][status][plugin:console_extensions@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:29.150] [info][status][plugin:notifications@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:29.157] [info][status][plugin:metrics@6.4.0] Status changed from uninitialized to green - Ready
+  log   [13:40:30.415] [warning][reporting] Generating a random key for xpack.reporting.encryptionKey. To prevent pending reports from failing on restart, please set xpack.reporting.encryptionKey in kibana.yml
+  log   [13:40:30.420] [info][status][plugin:reporting@6.4.0] Status changed from uninitialized to yellow - Waiting for Elasticsearch
+  log   [13:40:30.524] [info][listening][server][http] Server running at http://192.168.56.101:5601
+  log   [13:40:30.616] [info][status][plugin:elasticsearch@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.702] [info][license][xpack] Imported license information from Elasticsearch for the [data] cluster: mode: basic | status: active
+  log   [13:40:30.706] [info][status][plugin:xpack_main@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.707] [info][status][plugin:searchprofiler@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.708] [info][status][plugin:ml@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.708] [info][status][plugin:tilemap@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.709] [info][status][plugin:watcher@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.709] [info][status][plugin:index_management@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.710] [info][status][plugin:graph@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.711] [info][status][plugin:grokdebugger@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.716] [info][status][plugin:logstash@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.717] [info][status][plugin:reporting@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.718] [info][kibana-monitoring][monitoring-ui] Starting monitoring stats collection
+  log   [13:40:30.724] [info][status][plugin:security@6.4.0] Status changed from yellow to green - Ready
+  log   [13:40:30.808] [info][license][xpack] Imported license information from Elasticsearch for the [monitoring] cluster: mode: basic | status: active
+
+```
+
+http://192.168.56.101:5601
+
+可以访问了
+
+http://192.168.56.101:5601/status
+
+查看状态
+
+
+
 ## logstash消费kafka数据到es
 
 
@@ -457,6 +587,8 @@ consomer接收到的数据
 [日志监控平台搭建 关于flume Kafka Elk](https://www.slahser.com/2016/04/21/%E6%97%A5%E5%BF%97%E7%9B%91%E6%8E%A7%E5%B9%B3%E5%8F%B0%E6%90%AD%E5%BB%BA-%E5%85%B3%E4%BA%8EFlume-Kafka-ELK/)
 
 [ELK 安装部署实战 (最新6.4.0版本)](https://www.cnblogs.com/woodylau/p/elk_latest.html)
+
+[ELK实时日志分析平台环境部署--完整记录](https://www.cnblogs.com/kevingrace/p/5919021.html)
 
 [日志收集之--将Kafka数据导入elasticsearch](https://www.cnblogs.com/moonandstar08/p/6556899.html)
 
